file pathe is changed for assests again

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ hr{
 
 
 .hero-section{
-    background-image: url('/assests/images/hero.jpg');
+    background-image: url('assests/images/hero.jpg');
     border-radius: 10px;
     margin: 0 auto;
    max-height:720px ;background-position: cover;
@@ -224,22 +224,22 @@ text-align: center;
     padding:10px;
 }
 .card-1{
-    background-image: url('/assests/images/dental-team.webp');
+    background-image: url('assests/images/dental-team.webp');
     
 }
 .card-2{
-     background-image: url('/assests/images/im.jpeg');
+     background-image: url('assests/images/im.jpeg');
     
 }
 .card-3{
-     background-image: url('/assests/images/root_canal.jpg');
+     background-image: url('assests/images/root_canal.jpg');
     
 }
 .card-4{
-     background-image: url('/assests/images/filling.jpg');}
+     background-image: url( 'assests/images/filling.jpg');}
      
 .card-5{
-     background-image: url('/assests/images/dental-crowns.png');
+     background-image: url('assests/images/dental-crowns.png');
     
 }
 .card-1 h3,.card-2 h3,.card-3 h3,.card-4 h3,.card-5 h3{
@@ -286,13 +286,13 @@ border-radius: 10px;
 
 
 .card-1-expertise{
-    background-image: url('../assests/images/technology.jpg');
+    background-image: url('assests/images/technology.jpg');
 }
 .card-2-expertise{
-    background-image: url('../assests/images/dental-team.webp');
+    background-image: url('assests/images/dental-team.webp');
 }
 .card-3-expertise{
-    background-image: url('../assests/images/patient.jpg');
+    background-image: url('assests/images/patient.jpg');
 }
 #ourdoctors{
     margin-top:100px;
@@ -319,14 +319,14 @@ border-radius: 10px;
 
 }
 .card-1-expert{
-     background-image: url('../assests/images/drhabiba.jpeg');
+     background-image: url('assests/images/drhabiba.jpeg');
      background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
 
 }
 .card-2-expert{
-     background-image: url('../assests/images/drabantika.png');
+     background-image: url('assests/images/drabantika.png');
     background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
