whatsapp link is added

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ text-align: center;
 }
 .get-started a{
     text-decoration: none;
+    color:white;
 }
 .service{
     border:1px solid #4235cd;
